--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
           <ul class="options">
             <li class="option tool" id="rectangle">
               <img src="icons/rectangle.svg" alt="">
-              <span>Rectangle</span>
+              <span>Cube Van</span>
             </li>
             <li class="option tool" id="circle">
               <img src="icons/circle.svg" alt="">
-              <span>Circle</span>
+              <span>Craft Truck</span>
             </li>
             <li class="option tool" id="triangle">
               <img src="icons/triangle.svg" alt="">
-              <span>Triangle</span>
+              <span>Package Truck</span>
             </li>
             <li class="option">
               <input type="checkbox" id="fill-color">
